# usvg

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
docs/: usvg_spec.adoc
src/: error.rs  geom.rs  lib.rs  main.rs  options.rs  traits.rs  utils.rs
src/convert/: clippath.rs  fill.rs  gradient.rs  image.rs  mask.rs  mod.rs  path.rs  pattern.rs  shapes.rs  stroke.rs  text.rs
src/preproc/: clip_element.rs  conv_units.rs  fix_gradient_stops.rs  fix_recursive_pattern.rs  fix_xlinks.rs  group_defs.rs  mod.rs  prepare_clip_path.rs  prepare_mask.rs  prepare_nested_svg.rs  prepare_text_decoration.rs  prepare_text_nodes.rs  regroup.rs  resolve_children_via_xlink.rs  resolve_curr_color.rs  resolve_font_size.rs  resolve_font_weight.rs  resolve_gradient_attrs.rs  resolve_gradient_stops.rs  resolve_inherit.rs  resolve_pattern_children.rs  resolve_style_attrs.rs  resolve_svg_size.rs  resolve_tref.rs  resolve_use.rs  resolve_visibility.rs  resolve_xlink.rs  rm_desc_elems.rs  rm_invalid_clip_path.rs  rm_invalid_font_size.rs  rm_invalid_gradients.rs  rm_invalid_patterns.rs  rm_invalid_shapes.rs  rm_invalid_ts.rs  rm_invisible_elems.rs  rm_non_svg_data.rs  rm_unused_defs.rs  ungroup_a.rs  ungroup_groups.rs  ungroup_switch.rs
src/tree/: attribute.rs  convert.rs  dump.rs  io.rs  mod.rs  node.rs
testing_tools/: allow.csv  cache.csv  regression.py
tests/: api.rs  cli.rs  preproc.rs  test.rs
tests/data/: README.md  clippath_with_invalid_child.xml  clippath_with_invalid_children.xml  group_clippath.xml  groups.xml  ignore_empty_groups_with_id.xml  ignore_groups_with_id.xml  keep_groups_with_id.xml  keep_groups_with_opacity.xml  minimal.xml  pattern_with_invalid_child.xml  pattern_without_children.xml  preserve_id.xml
