[package]
name = "usvg"
version = "0.1.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
description = "An SVG simplification library."
categories = ["multimedia::images"]

[workspace]
members = ["cli"]

[lib]
name = "usvg"
path = "src/lib.rs"

[dependencies]
base64 = "0.9"
euclid = "0.17"
failure = "0.1.1"
libflate = "0.1"
log = "0.4"
lyon_geom = "0.10"
rctree = "0.2.1"
svgdom = { git = "https://github.com/RazrFalcon/svgdom", rev = "28f35c1" }

[dev-dependencies]
assert_cli = "0.5.4"
tempdir = "0.3"
pretty_assertions = "0.5.1"
toml = "0.4.5"
serde = "1.0.34"
serde_derive = "1.0.34"
rustc-test = "0.3"
