[package]
name = "usvg-cli"
version = "0.1.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
description = "An SVG simplification tool."
categories = ["multimedia::images"]
workspace = ".."

[dependencies]
clap = { version = "2", default-features = false }
failure = "0.1.1"
fern = "0.5"
libflate = "0.1"
log = "0.4"
usvg = { path = "../" }

[[bin]]
name = "usvg"
path = "src/main.rs"
