[package]
name = "usvg-cli"
version = "0.1.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
description = "An SVG simplification tool."
categories = ["multimedia::images"]
workspace = ".."

[dependencies]
clap = { version = "2", default-features = false }
fern = "0.5"
log = "0.4"
usvg = { path = "../" }

[[bin]]
name = "usvg"
path = "src/main.rs"
