[package]
name = "usvg-cli"
version = "0.2.0"
authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
description = "An SVG simplification tool."
categories = ["multimedia::images"]
workspace = ".."

[dependencies]
fern = "0.5"
getopts = "0.2"
log = "0.4"
usvg = { path = "../" }

[[bin]]
name = "usvg"
path = "src/main.rs"
